[package]
name = "edgedb-sdk-macros"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"
description = """
    Proc macros and derives EdgeDB SDK for WebAssembly workers
"""

[lib]
proc-macro = true

[dependencies]
syn = {version="1.0.81", features=[]}
quote = "1.0.10"
proc-macro2 = "1.0.32"
proc-macro-error = "1.0.4"

[features]
