[package]
name = "edgedb-sdk"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"
description = """
    EdgeDB SDK for WebAssembly workers
"""

[dependencies]
edgedb-client = {version="0.1.0", optional=true} # , features=["wasm"], default-features=false }
minicbor = {version="0.8.0", features=["derive", "std"]}
http = {version="0.2.6", default-features=false}
anyhow = "1.0.52"
thiserror = "1.0.30"

[features]
default = ["edgedb-client"]
host = []
