[package]
name = "edgedb-sdk"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"
description = """
    EdgeDB SDK for WebAssembly workers
"""

[dependencies]
edgedb-sdk-macros = {path="../macros"}
edgedb-protocol = { path="../edgedb-rust/edgedb-protocol", optional=true }
edgedb-errors = { path="../edgedb-rust/edgedb-errors", optional=true }
minicbor = {version="0.8.0", features=["derive", "std"]}
http = {version="0.2.6", default-features=false}
anyhow = "1.0.52"
thiserror = "1.0.30"
wit-bindgen-rust = { git="https://github.com/bytecodealliance/wit-bindgen/" }
log = "0.4.14"
once_cell = "1.9.0"

[features]
default = ["client"]
host = []
client = ["edgedb-protocol", "edgedb-errors"]
