[package]
name = "edgedb-wasm-server"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"
description = """
    EdgeDB WebAssembly server
"""
default-run = "edgedb-wasm-server"

[dependencies]
edgedb-sdk = { path="../sdk", features=["host"], default-features=false }
edgedb-tokio = { path="../edgedb-rust/edgedb-tokio", default-features=false }
edgedb-protocol = { path="../edgedb-rust/edgedb-protocol", default-features=false }
edgedb-errors = { path="../edgedb-rust/edgedb-errors", default-features=false }
bytes = "1.1.0"
clap = { version="3.0.7", features=["derive"] }
log = "0.4.14"
env_logger = "0.9.0"
wasmtime = { version="0.33.0", features=["async"] }
wasmtime-wasi = "0.33.0"
fn-error-context = "0.2.0"
async-trait = "0.1.52"
anyhow = "1.0.52"
tokio = { version="1.15", features=["fs", "rt-multi-thread", "macros"] }
wit-bindgen-wasmtime = { git="https://github.com/bytecodealliance/wit-bindgen/", features=["async"] }
hyper = { version="0.14.16", features=["server", "tcp", "http1", "http2"] }
