[package]
name = "edgedb-wasm-server"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"
description = """
    EdgeDB WebAssembly server
"""
default-run = "edgedb-wasm-server"

[dependencies]
edgedb-sdk = { path="../sdk", features=["host"], default-features=false }
edgedb-tokio = { git="https://github.com/edgedb/edgedb-rust", branch="tokio", features=["unstable"], default-features=false }
edgedb-protocol = { git="https://github.com/edgedb/edgedb-rust", branch="tokio", default-features=false }
edgedb-errors = { git="https://github.com/edgedb/edgedb-rust", branch="tokio", default-features=false }
bytes = { version="1.1.0", features=["serde"] }
clap = { version="3.0.7", features=["derive"] }
log = "0.4.14"
env_logger = "0.9.0"
wasmtime = { version="0.34.0", features=["async"] }
wasmtime-wasi = "0.34.0"
fn-error-context = "0.2.0"
async-trait = "0.1.52"
anyhow = "1.0.52"
tokio = { version="1.15", features=["fs", "rt-multi-thread", "macros"] }
wit-bindgen-wasmtime = { git="https://github.com/bytecodealliance/wit-bindgen/", features=["async"] }
hyper = { version="0.14.16", features=["server", "tcp", "http1", "http2"] }
async-once-cell = "0.3.0"

serde = "1.0.136"
serde-pickle = "1.1.0"
