[package]
name = "conflicting-counter"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = """
    Example app with transactions for EdgeDB WebAssembly SDK
"""
authors = ["MagicStack Inc. <hello@magic.io>"]
publish = false

[dependencies]
edgedb-sdk = {path="../../sdk"}
once_cell = "1.9.0"
